fixed last crossmodel test for mongo and reverted default store